# gbsoftOltu

./: .gitignore  DEPLOYMENT_FIXES.md  DEPLOYMENT_READY.md  LOGIN_TROUBLESHOOTING.md  PRODUCTION_DOCKER_DEPLOY.md  PROJECT_STATUS.md  QUICK_SETUP.md  QUICK_START.md  README.md  ROUTE_OPTIMIZATION_COMPLETE_STATUS.md  ROUTE_OPTIMIZATION_PHASE_2_PLAN.md  SETUP_DATABASE_AND_BACKEND.md  SETUP_INSTRUCTIONS.md  WINDOWS_DOCKER_WORKAROUND.md  WORKAROUND_DATABASE.md  deck.md  deploy-production.ps1  deploy-production.sh  lastcheck.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  setup.ps1  turbo.json
.claude/: settings.local.json
ai-service/: Dockerfile.dev  Dockerfile.prod  main.py  package.json  pyproject.toml  requirements.txt
ai-service/models/: emission_estimator.py  fuel_predictor.py  shift_optimizer.py
ai-service/routers/: emissions.py  fuel.py  shifts.py
ai-service/schemas/: emissions.py  fuel.py  shifts.py
ai-service/utils/: auth.py  cache.py  database.py  logger.py  model_registry.py
ai-service/utils/solvers/: timefold_hybrid.py
backend/: .eslintrc.json  .gitignore  Dockerfile.dev  Dockerfile.prod  SECURITY_FIXES.md  SUPABASE_CONNECTION_FIX.md  jest.config.js  lastcheck.md  package-lock.json  package.json  pnpm-lock.yaml  test-connection.js  tsconfig.json
docs/: 30_USER_CAPACITY_SUMMARY.md  30_USER_DEPLOYMENT_QUICK_START.md  API.md  DEVELOPMENT.md  FUNCTIONAL_FIX_PLAN.md  IMPLEMENTATION_SUMMARY.md  MAPBOX_SECURITY.md  MAP_STRUCTURE_ANALYSIS.md  README_30_USER_PLAN.md  SECURITY_FIXES_IMPLEMENTED.md  TASK_ASSIGNMENT_IMPLEMENTATION_SUMMARY.md  (+7 more)
(+161 files in other folders)
